--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -249,3 +249,13 @@
     貴州の重湯漬けは炒ったもち米の煮汁につける。
     産膜酵母が張ってても気にせず混ぜ込むシェフ、まあそうするよなというのはわかるが産膜酵母が張ったあとの味はあまり好きじゃない。
     People's Republic of Fermentation は暇なときに見よう。
+- date: 2025-05-24
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 47 ~ 60
+  notes: |
+    日本は長野木曽のすんき。すんきは塩を使わず前年の漬け汁でバックスロッピングする。以前長野に行ったときには売ってなかったのもあり、季節のもので手に入れにくい印象がある。
+    教え子のターメリックペースト漬け。ペースト自体が発酵しててそれも漬けた野菜と一緒に食べれる。他の野菜でもできるのかな。
+    クロアチアのザワークラウト。キャベツを丸ごと発酵させる。芯をくり抜き塩を詰める。
+    スパイスとして胡椒を添加したり、発酵を促進させるため乾燥トウモロコシを入れる。
+    現代は密閉しやすいように食品グレードのポリ袋を利用する。
+    原初は水を加えずキャベツの水分だけで漬けてたので、これも現代的な変化か。
