--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -259,3 +259,12 @@
     スパイスとして胡椒を添加したり、発酵を促進させるため乾燥トウモロコシを入れる。
     現代は密閉しやすいように食品グレードのポリ袋を利用する。
     原初は水を加えずキャベツの水分だけで漬けてたので、これも現代的な変化か。
+- date: 2025-05-25
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 61 ~ 75
+  notes: |
+    ルーマニアの丸ごとザワークラウトは水を使わない。ザワークラウトで具を包むサルマと塩漬けのブドウの葉で包むドルマ。
+    本書ではトルコにも触れられてるが、確かセルビアにもサルマがあって、どうも中東から東ヨーロッパにかけて親しまれてる伝統料理みたい。
+    スイス山中のクラウト工場の製法の現代化の流れは興味深い。ザワークラウトのチョコレートケーキはスポンジのための重曹で酸味が中和される。
+    メキシコ風キムチと昆虫食。アミの塩辛の代わりにチャプリネス(Chapulines バッタの唐揚げ)を使う。アミの塩辛みたいに発酵してないけど。
+    ポーランド風キムチ。きのこの発酵は興味が強いがまだやったことない。加熱は必須やろな。
