--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -268,3 +268,14 @@
     スイス山中のクラウト工場の製法の現代化の流れは興味深い。ザワークラウトのチョコレートケーキはスポンジのための重曹で酸味が中和される。
     メキシコ風キムチと昆虫食。アミの塩辛の代わりにチャプリネス(Chapulines バッタの唐揚げ)を使う。アミの塩辛みたいに発酵してないけど。
     ポーランド風キムチ。きのこの発酵は興味が強いがまだやったことない。加熱は必須やろな。
+- date: 2025-05-26
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 76 ~ 95
+  notes: |
+    Cultured Pickle Shop の粕漬けは Takara Sake の酒粕で長時間漬ける。調べてみたらどうも宝酒造みたい。
+    Feb Ferments の Bubonic Tonic ビーツクワスはビーツを使った発酵飲料。ピックルバックみたいな感じ？
+    ビルマのラペソーは若い茶葉を発酵させる。手に入れにくいので乾燥茶葉を使うアレンジ。
+    スペインの発酵オリーブ。アク抜きに 5~20 日間と時間がかかる。オリーブ好きなのでやってみたがい手に入れにくいので却下。
+    スペインのオリーブ農場でかつて使われていた石・機械式の圧搾機、趣があって良い。
+    発酵野菜や漬け汁を乾燥させる。ネパールにグンドゥルックという発酵野菜があるみたいなので、更に保存性を高める手段で使われるのかな。
+    漬け汁を乾燥させて塩を得るのは、梅酢で作る梅塩みたいな感じか。
