--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -279,3 +279,16 @@
     スペインのオリーブ農場でかつて使われていた石・機械式の圧搾機、趣があって良い。
     発酵野菜や漬け汁を乾燥させる。ネパールにグンドゥルックという発酵野菜があるみたいなので、更に保存性を高める手段で使われるのかな。
     漬け汁を乾燥させて塩を得るのは、梅酢で作る梅塩みたいな感じか。
+- date: 2025-05-27
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 96 ~ 106
+  notes: |
+    3 章 穀物とイモ類
+    世界の大部分で穀物とイモ類は主食であり、発酵はそれらの食品の栄養素を利用しやすくし強化する。
+    欧米では穀物の発酵はパンとビールが主だが、世界中で様々な形の発酵が行われている。
+    現在の穀物の製粉の殆どは巨大な工場で行われ、利便性や効率と引き換えに食料安全やサプライチェーンにおける危機がある。
+    氏は地元や近隣地域での食品加工の復活がその解決策であると考えている。
+    キシェルはオーツ麦を水に浸し発酵させポリッジにした食品。かつての東ヨーロッパでは一般的だったが、現在はあまり見られない。
+    ビールなど活発に発酵した飲料をスターターにしてパンが作れる。
+    塩入り自然発酵パンは Clostridium perfringens(ウェルシュ菌) でパンを膨らませる。ギリシャやスーダンで同様の手法が見られる。
+    ウェルシュ菌で調べると食中毒の話ばかりですごく珍しい手法のよう。
