--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -292,3 +292,10 @@
     ビールなど活発に発酵した飲料をスターターにしてパンが作れる。
     塩入り自然発酵パンは Clostridium perfringens(ウェルシュ菌) でパンを膨らませる。ギリシャやスーダンで同様の手法が見られる。
     ウェルシュ菌で調べると食中毒の話ばかりですごく珍しい手法のよう。
+- date: 2025-05-28
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 107 ~ 115
+  notes: |
+    中国のコメから作る酒。パイチュウ(白酒)とヌオミーチュウ(糯米酒)。白酒を蒸留するための、中華鍋の上において使うシンプルな蒸留器がある。
+    恐らく糯米酒の話。酒麹という市販のスターターを使うコメのアルコール発酵。搾りかすはチュウニャン(酒醸)といい、デザートなどに使われる。
+    極めてシンプルな発酵手法やな。どぶろくのようで糯米だし濾すので薄濁りみたいな感じ？
