--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -299,3 +299,13 @@
     中国のコメから作る酒。パイチュウ(白酒)とヌオミーチュウ(糯米酒)。白酒を蒸留するための、中華鍋の上において使うシンプルな蒸留器がある。
     恐らく糯米酒の話。酒麹という市販のスターターを使うコメのアルコール発酵。搾りかすはチュウニャン(酒醸)といい、デザートなどに使われる。
     極めてシンプルな発酵手法やな。どぶろくのようで糯米だし濾すので薄濁りみたいな感じ？
+- date: 2025-05-29
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 116 ~ 126
+  notes: |
+    チチャ(chicha)は南米の主にトウモロコシ、他の穀物、芋類、フルーツ、蜂蜜や糖類から作られる、主にハレの日に用いる発酵アルコール飲料。
+    チチャは本来 fabkua と呼ばれていたが、スペイン人が fabkua で腹を下したのをチチャ(下痢)と現地の人が言ってスペイン人たちが名前だと勘違いしたのが始まりだという。
+    発酵によって酢に変化するため調理の応用範囲が広い。伝統的に作り手は女性で、古い手法ではいわゆる口噛み酒の手法で、他にはモルトを使う手法がある。
+    チチャ・デ・ホラ(chicha de jora)はエクアドルの手法のチチャ。ホラはモルト処理したトウモロコシを意味する。
+    チチャ・フエルテ(chicha fuerte)。パナマの手法のチチャ。フエルテは「強い」という意味。ホラのチチャだが砂糖を入れたり発酵期間が長くてアルコールが強いから？
+    チチャ・ブランカ(chicha blanca)はペルーはクスコのキヌアを使うチチャ。発酵を促進させるためにパイナップルの皮を用いるのは氏のアレンジか。
