--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -309,3 +309,14 @@
     チチャ・デ・ホラ(chicha de jora)はエクアドルの手法のチチャ。ホラはモルト処理したトウモロコシを意味する。
     チチャ・フエルテ(chicha fuerte)。パナマの手法のチチャ。フエルテは「強い」という意味。ホラのチチャだが砂糖を入れたり発酵期間が長くてアルコールが強いから？
     チチャ・ブランカ(chicha blanca)はペルーはクスコのキヌアを使うチチャ。発酵を促進させるためにパイナップルの皮を用いるのは氏のアレンジか。
+- date: 2025-05-30
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 127 ~ 137
+  notes: |
+    南アメリカのイモ類。ジャガイモ・キャッサバの現品種は苦みと有毒で発酵等の加工が必要だった。
+    ジャガイモ・キャッサバ・サツマイモのような世界的な注目を集めないアラカチャ(arracacha)・マシュア(mashua)・ウルーコ(melloco)・オカ(oca)・ヤーコン(yacon)等がある。
+    キャッサバとサツマイモのチチャ。サツマイモに含まれるアミラーゼが発酵を促進する。アマゾン川流域の住民は大昔から知っていた。
+    発酵キャッサバのトルティージャ(Yuca podrida)。発酵キャッサバをトルティージャの具に使う。
+    トゥクピー(tucupi)は苦み種のキャッサバの有毒なジュースを発酵させ無毒化しタール状のペーストにした調味料。発酵キャッサバから作られる産物に 1 つで他にもデンプンは caguana と呼ばれる。
+    最後に先住民の慣習に触れる。先住民が発酵の文化を持たないといわれていた先入観は入植者達のプロパガンダに過ぎず、文化に根付く洗練された発酵手法がある。
+    多くは失われたが残された文化を受け継ぐことがその伝統を尊重することである、と。教化なんかもそうやろうけどどこを見渡してもあるよな。日本でも。
