--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -320,3 +320,13 @@
     トゥクピー(tucupi)は苦み種のキャッサバの有毒なジュースを発酵させ無毒化しタール状のペーストにした調味料。発酵キャッサバから作られる産物に 1 つで他にもデンプンは caguana と呼ばれる。
     最後に先住民の慣習に触れる。先住民が発酵の文化を持たないといわれていた先入観は入植者達のプロパガンダに過ぎず、文化に根付く洗練された発酵手法がある。
     多くは失われたが残された文化を受け継ぐことがその伝統を尊重することである、と。教化なんかもそうやろうけどどこを見渡してもあるよな。日本でも。
+- date: 2025-05-31
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 138 ~ 143
+  notes: |
+    4 章 カビを育てる
+    この章ではカビと言われる糸状菌を利用した発酵に目を向ける。
+    カビによる発酵に必要な条件は厳しい。小さなバッチから工夫しながら学ぶ必要がある。
+    カビは特にアジアで広く利用される。モルト処理や唾液による糖化の手法の 3 つ目の手法として知られる。
+    麹の作り方にも昔ながらの手作りと完全に機械化された方法がある。
+    流石に麹は味噌作るときでも買ったことしかないわ。自家培養するなら失敗を許容して実験する覚悟がいるな。
