--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -6,3 +6,13 @@
     Glen Scotia の設備はスチルとウォッシュバックが珍しい感じ。
     10 年以上前の本なので Gran Moray の設備更新と生産拡大前みたいであんまり書いてなかった。
     Gran Moray はノンピーテッドが基本だが、何を思ったか今回買ったのはピーテッドなので、いつかちゃんとノンピーテッドを買わないといけない。
+- date: 2025-06-02
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 144 ~ 150
+  notes: |
+    麹の作り方。水分含有量が重要なので水分が多い培地では注意深く管理する必要がある。
+    様々な培地での麹の作り方を学ぶには Koji Alchemy を読むのがお勧めらしい。ニンジンやビーツにも麹が育つと。
+    菩提酛製法は古代の酒の製法で、醸すのに一定の温度を保つ等の厳密さがいらない。
+    米の半分はそのまま水と混ぜてスターターに、もう一方は炊いて発酵の栄養源とする。
+    現代的な酒造りと違い数日しかかからない。濾した液体は酒、残った固形物は酒粕だ。
+    洗練された酒を作るのでなければ、プリミティブな方法でシンプルに済むんやな。
