--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -16,3 +16,10 @@
     米の半分はそのまま水と混ぜてスターターに、もう一方は炊いて発酵の栄養源とする。
     現代的な酒造りと違い数日しかかからない。濾した液体は酒、残った固形物は酒粕だ。
     洗練された酒を作るのでなければ、プリミティブな方法でシンプルに済むんやな。
+- date: 2025-06-03
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 151 ~ 160
+  notes: |
+    酒粕を使ったメニュー。酒粕がパンに膨張力と風味をもたらす。どうも酒粕を再発酵させてパン種にするってことみたい。
+    塩麹。海外の発酵実践者にもよく知られてるようで、氏は塩の量を控えめに作る。
+    みりん。焼酎を加えることでアルコール発酵を抑えてんだ、知らなかった。酒税法の対象なので作れないけどな。
