--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -23,3 +23,16 @@
     酒粕を使ったメニュー。酒粕がパンに膨張力と風味をもたらす。どうも酒粕を再発酵させてパン種にするってことみたい。
     塩麹。海外の発酵実践者にもよく知られてるようで、氏は塩の量を控えめに作る。
     みりん。焼酎を加えることでアルコール発酵を抑えてんだ、知らなかった。酒税法の対象なので作れないけどな。
+- date: 2025-06-04
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 151 ~ 175
+  notes: |
+    ガルムはローマ時代の言葉で魚醤をさす。ここではクズ野菜・麹・塩・水を混ぜて発酵させたソース。
+    氏のアレンジは、発酵を促すための比較的高い温度を使えないので塩分濃度を高めて長時間発酵させること。
+    元のガルムのように魚や他の動物性のものを使う手法もある。 Koji Alchemy ではアミノソース・アミノペーストという名で呼ぶ。
+    味噌。海外では大豆以外のナッツのような豆類、豆類でもないベーコン・チーズ・パンで作る実験的な手法を試す人もいる。
+    タンパク質を菌類が代謝してうま味を得られると思うのだけどパンでもできるってこと？
+    タペ(tape)はキャッサバを発酵させたインドネシアのデザート。キャッサバや米にラギ(ragi)を混ぜてバナナに包み発酵させる。
+    固形の部分がタペで、液体は brem といい僅かにアルコールを含む。
+    豆板醤はそら豆と唐辛子を発酵させる。そら豆にカビを育て塩漬け、唐辛子は塩漬けで発酵なので乳酸か。
+    発酵した 2 つを混ぜてこれまた数ヶ月～数年発酵させる。なるべく日光に当て蒸発を促し味を濃縮させるというのも面白い。
