--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -36,3 +36,13 @@
     固形の部分がタペで、液体は brem といい僅かにアルコールを含む。
     豆板醤はそら豆と唐辛子を発酵させる。そら豆にカビを育て塩漬け、唐辛子は塩漬けで発酵なので乳酸か。
     発酵した 2 つを混ぜてこれまた数ヶ月～数年発酵させる。なるべく日光に当て蒸発を促し味を濃縮させるというのも面白い。
+- date: 2025-06-05
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 176 ~ 181
+  notes: |
+    麹は実験室で培養された純粋株が使われることが多いが、アジア各地で見られる伝統的な手法は混合培養だ。
+    胞子に富む培養専用のスペースを使う方法やバックスロッピングといった伝統的な手法が用いられる。
+    そういったものの 1 つにインド北部の辺境カラップ村で見た「田舎のアルコール」のスターターとして使われていたファフ(faf)がある。
+    ヒマラヤの phab やインドの pham という似た単語があるが関連は不明。
+    ファフの正確な製法は不明だが穀物とアマランサスと何らかの植物の混合培養スターターだった。
+    今の日本だとこういう謎スターターに近いのはすんきくらいしかないか。昔はもっとあったのかもしれんが。
