--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -46,3 +46,12 @@
     ヒマラヤの phab やインドの pham という似た単語があるが関連は不明。
     ファフの正確な製法は不明だが穀物とアマランサスと何らかの植物の混合培養スターターだった。
     今の日本だとこういう謎スターターに近いのはすんきくらいしかないか。昔はもっとあったのかもしれんが。
+- date: 2025-06-06
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 182 ~ 189
+  notes: |
+    南米にもカビを使った伝統の発酵食がある。コスタリカはブリブリ族でオコ(oko)と呼ばれるチチャのスターター。スペイン語で mohoso (カビが生えた)として知られる。
+    水に浸したトウモロコシの乾燥した穀粒をすり潰したペーストを bijawa と呼ぶ植物の葉で包み、鍋で 1 時間ほど煮たあと取り出して自然に発酵させる。
+    カビを使うのは、アジアの手法に関連があるのか、あるいはかつてはキャッサバの発酵にカビを使う手法がアマゾン川流域で行われていたのに関連するのか。
+    インドネシアのテンペも豆類を糸状菌で発酵させる。例では、市販のスターターではなく植物の葉で大豆に複数株の胞子形成金が付着したものをスターターとしている。
+    アジア圏では広くカビが使う伝統が残っているが、他所では失われたのかもって話。プリミティブな方法ほど類似の手法が発生しやすいので確かにという感じ。
