--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -55,3 +55,14 @@
     カビを使うのは、アジアの手法に関連があるのか、あるいはかつてはキャッサバの発酵にカビを使う手法がアマゾン川流域で行われていたのに関連するのか。
     インドネシアのテンペも豆類を糸状菌で発酵させる。例では、市販のスターターではなく植物の葉で大豆に複数株の胞子形成金が付着したものをスターターとしている。
     アジア圏では広くカビが使う伝統が残っているが、他所では失われたのかもって話。プリミティブな方法ほど類似の手法が発生しやすいので確かにという感じ。
+- date: 2025-06-07
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 190 ~ 197
+  notes: |
+    テンペの創造的な利用方法にボウルがある。ピュイ産のレンズ豆と炙って砕いたルピナスの欠片を基材にしている。
+    テンペの菌糸の水を弾く性質に加え 180 ℃で短時間で焼締められていて熱いスープの容器としても使える。
+    挑戦的な豆類以外のテンペの例として穀物やイモ類がある。ジャガイモ・サツマイモ・ヤムイモ以外にもキャッサバ・トウモロコシ・タロイモ・パースニップでもできるらしい。
+    ジャガイモのテンペのレシピではブロックに切り分けるが、そのままでテンペの菌糸を育てることもできる。
+    麹の Aspergillus 属同様にテンペの Rhizopus 属のカビも栄養素を分解し風味を増強する酵素を持つので、テンペも麹同様に新しい利用方法を実験されている。
+    発酵に適切な高温で酵素の活動を加速された環境で長時間発酵すると酵素とメイラード反応により外観・食感・風味に多大な変化を生じる。
+    ルピナスって食べれるの？と思ったがどうもルパン豆なるものがあるのでそれぽい。
