--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -66,3 +66,11 @@
     麹の Aspergillus 属同様にテンペの Rhizopus 属のカビも栄養素を分解し風味を増強する酵素を持つので、テンペも麹同様に新しい利用方法を実験されている。
     発酵に適切な高温で酵素の活動を加速された環境で長時間発酵すると酵素とメイラード反応により外観・食感・風味に多大な変化を生じる。
     ルピナスって食べれるの？と思ったがどうもルパン豆なるものがあるのでそれぽい。
+- date: 2025-06-08
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 198 ~ 201
+  notes: |
+    中国の毛豆腐は Actinomucor, Mucor, Rhizopus 属の鍵が優先している。稲わらやかぼちゃの葉が菌類の供給元として利用される。
+    他に食品に Penicillium 属のカビを育てたり、スコビーのようなバイオフィルムを創作料理の構成要素に利用する例が挙げられた。
+    ヒト以外に菌類と共生する例としてハキリアリがある。
+    このモケモケの豆腐を食べるのは慣れてないと勇気がいりそう。日本ではモケモケの食品見ないからなあ。
