--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -74,3 +74,17 @@
     他に食品に Penicillium 属のカビを育てたり、スコビーのようなバイオフィルムを創作料理の構成要素に利用する例が挙げられた。
     ヒト以外に菌類と共生する例としてハキリアリがある。
     このモケモケの豆腐を食べるのは慣れてないと勇気がいりそう。日本ではモケモケの食品見ないからなあ。
+- date: 2025-06-09
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 202 ~ 207
+  notes: |
+    5 章 豆類と種子
+    豆類・種子の自然発生的な天然発酵の手法について。
+    納豆は他の日本の発酵食品ほど国際的に知られていない。そうなのか。
+    納豆は丸大豆を Bacillus subtilis という土壌中によく見られるバクテリアが発酵させたもの。
+    特徴的な匂いは発酵によって生じるアルカリ性の副産物による。
+    日本ではそのまま食べるが、 Bacillus 属を利用する大部分の地域では日持ちさせるため乾燥させる。
+    氏が勤奮で出会った地元の豆鼓はよく知られた麹を使うものより納豆に近かった。
+    他にも雲南省の昆明、ビルマ、インドのナガランド州西アフリカの発酵調味料にも納豆に似たものがあった。
+    いずれも Bacillus subtilis によって発酵される。
+    日本の外から見た納豆像とその強烈な個性を受け入れようとする海外のヒトを見れるのは面白いな。
