--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -88,3 +88,12 @@
     他にも雲南省の昆明、ビルマ、インドのナガランド州西アフリカの発酵調味料にも納豆に似たものがあった。
     いずれも Bacillus subtilis によって発酵される。
     日本の外から見た納豆像とその強烈な個性を受け入れようとする海外のヒトを見れるのは面白いな。
+- date: 2025-06-10
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 208 ~ 215
+  notes: |
+    納豆の作り方。どうも日本以外では粘り気を嫌って大きい大豆や違う豆類を使うのが好むのかな。
+    スターターは市販のものや納豆自体も利用できるがなしでも作れる。この場合時間が掛かるのと癖が強い味になる。自然の混合培養だからかな。
+    氏は納豆の類似品から勤奮の豆鼓をのような調味料スペシャルソースを作る。
+    ビルマの少数民族シャン族のトゥアナオも納豆に似た調味料。シャンのンガピ(ngapi, エビのペースト)とも呼ばれる。
+    これもスペシャルソース同様唐辛子・ゴマを加え、違いは生姜やハーブが入るところか。
