--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -97,3 +97,13 @@
     氏は納豆の類似品から勤奮の豆鼓をのような調味料スペシャルソースを作る。
     ビルマの少数民族シャン族のトゥアナオも納豆に似た調味料。シャンのンガピ(ngapi, エビのペースト)とも呼ばれる。
     これもスペシャルソース同様唐辛子・ゴマを加え、違いは生姜やハーブが入るところか。
+- date: 2025-06-11
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 216 ~ 227
+  notes: |
+    インドはナガランド州のアクニ(akuni, axone)も納豆に似た調味料。ナガ族の伝統的な発酵食品。
+    アクニは東ヒマラヤ全域で作り食べられ重要なアイデンティティであるがその食感・味・匂いはしばしば他の文化との対立となる点でも納豆と似ている。
+    西アフリカ一帯の発酵アフリカイナゴマメ(Palkia biglobosa)も似ている。
+    スンバル(soumbala)、ダワダワ(dawadawa)、イル(iru)、オギリ(ogiri)、アフィティ(afiti)、サンバレ(sounbareh)、ネテトウ(netetou)など地域と多種多様な名前がある。
+    またベナンではマスタード(moutarde)と呼ばれる。これらはブイヨンキューブが普及したことにより家庭から駆逐されてしまった。
+    イモ類の発酵のところでもあった文化の継承・多様性の話と同じよなこれ。メタファーとしての発酵でも氏は多様性に言及してた。
