--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -107,3 +107,15 @@
     スンバル(soumbala)、ダワダワ(dawadawa)、イル(iru)、オギリ(ogiri)、アフィティ(afiti)、サンバレ(sounbareh)、ネテトウ(netetou)など地域と多種多様な名前がある。
     またベナンではマスタード(moutarde)と呼ばれる。これらはブイヨンキューブが普及したことにより家庭から駆逐されてしまった。
     イモ類の発酵のところでもあった文化の継承・多様性の話と同じよなこれ。メタファーとしての発酵でも氏は多様性に言及してた。
+- date: 2025-06-12
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 228 ~ 235
+  notes: |
+    アジア以外では豆腐はは菜食をイメージするが実際は穀物。イモ類。動物の血など様々な材料の液体を凝固させた食品がある。
+    豆腐は作ったその日に消費されるので、 20 世紀以前は保存する方法が発酵しかなかった。それがフールー(腐乳)、ドウフールー(豆腐乳)。
+    腐乳は毛豆腐から作らなければボツリヌス菌等の有害なバクテリアの増殖を防止するのが難しい。
+    腐乳は毛豆腐をアルコールに浸したあと塩・スパイス・砂糖・紅麹などを加え発酵される。
+    毛豆腐がなくても腐乳は作れるが、その場合別の発酵産物を発酵の土台とするが、麹や納豆だと豆腐溶けてしまうこともある。
+    他に発酵豆腐としては滷(ルー)という漬け汁で発酵させる臭豆腐(チョウドウフ)がある。滷は地域によって違う。
+    あと他文化の発酵食品を蔑むのは無礼だよねという話。
+    紅麹の腐乳はどうも豆腐ようと同じか。臭豆腐は食べたことないが出会ったときに紳士的に向き合えるかなあ。
