--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -119,3 +119,11 @@
     他に発酵豆腐としては滷(ルー)という漬け汁で発酵させる臭豆腐(チョウドウフ)がある。滷は地域によって違う。
     あと他文化の発酵食品を蔑むのは無礼だよねという話。
     紅麹の腐乳はどうも豆腐ようと同じか。臭豆腐は食べたことないが出会ったときに紳士的に向き合えるかなあ。
+- date: 2025-06-13
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 236 ~ 241
+  notes: |
+    洗米村での祭りの料理、蛋腸(ダンチャン)。卵ソーセージで発酵料理ではない。
+    豆腐の味噌漬け。固めのの豆腐を長期発酵した塩辛い味噌に短期発酵の甘い味噌に糖とレモンを加えて漬けるレシピ。
+    おそらく木綿豆腐。味噌は合わせ味噌みたいな話で、麹の量が多い甘い味噌ってことなのだろうか。
+    次ページからコーヒーまでまとめて読んだほうが良さそうなので今日は少なめ。
