--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -127,3 +127,16 @@
     豆腐の味噌漬け。固めのの豆腐を長期発酵した塩辛い味噌に短期発酵の甘い味噌に糖とレモンを加えて漬けるレシピ。
     おそらく木綿豆腐。味噌は合わせ味噌みたいな話で、麹の量が多い甘い味噌ってことなのだろうか。
     次ページからコーヒーまでまとめて読んだほうが良さそうなので今日は少なめ。
+- date: 2025-06-14
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 242 ~ 253
+  notes: |
+    カカオの実は果実の発酵を経て種子も変性しカカオニブとなる。
+    氏が訪れたのはプランテーションを再植林した自然に近い森林農園のショコラティエ。
+    氏の多様性の観点からも、カカオやアブラヤシのようなプランテーションをモノカルチャーと批判している。
+    チュクラ(Chucula)はコロンビアのホットチョコレート飲料であり、伝統的な朝食である。
+    チョコレートは先進国で嗜好品として消費される以前から続く、薬学的儀式的な食材。
+    氏はチュクラの前段階をチベットの主食ツァンパ(tsampas)と呼ぶ。カカオペーストを煮詰め穀物や豆類の粉と混ぜて作る。
+    コーヒーの製造にも発酵が関わる。果肉を取り除く際に発酵を使うと様々なフレーバーが付加される。
+    酸っぱいコーヒーが好きなのでこれは知ってた。手法によって爽やかな芳香があるのよね。
+    チョコのように文化的な意味があった食品が嗜好品になる例は他にもあるよな、忘れがちやけど。
