--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -140,3 +140,13 @@
     コーヒーの製造にも発酵が関わる。果肉を取り除く際に発酵を使うと様々なフレーバーが付加される。
     酸っぱいコーヒーが好きなのでこれは知ってた。手法によって爽やかな芳香があるのよね。
     チョコのように文化的な意味があった食品が嗜好品になる例は他にもあるよな、忘れがちやけど。
+- date: 2025-06-15
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 254 ~ 261
+  notes: |
+    アカラジェ(Acaraje)は黒目豆と玉ねぎの生地で作るアフリカ系ブラジル料理のフリッター。
+    ファリナータ(Farinata)はイタリアのひよこ豆の生地で作る揚げ菓子。
+    氏のレシピはいずれも生地を発酵させる。
+    氏が過去に食べたアカラジェは、熱帯の暑さで自然に発酵していたのではないかという考察。
+    最後は多様性の話。珍しい発酵文化も多数派の白人文化によって消費されているという見解と、多様な文化に敬意を払い伝統を分かち合おうという話。
+    時代による倫理の変化はあるが、文化毎の伝統は尊重されるべきというのはご尤も。
