--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -150,3 +150,12 @@
     氏が過去に食べたアカラジェは、熱帯の暑さで自然に発酵していたのではないかという考察。
     最後は多様性の話。珍しい発酵文化も多数派の白人文化によって消費されているという見解と、多様な文化に敬意を払い伝統を分かち合おうという話。
     時代による倫理の変化はあるが、文化毎の伝統は尊重されるべきというのはご尤も。
+- date: 2025-06-16
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 262 ~ 267
+  notes: |
+    6 章 ミルク
+    冷蔵や殺菌技術が発達するまでミルクの殆どは発酵されていた。
+    凝乳(clabber)・ヨーグルト・ダヒケフィア・ヴィーリ(viili)。スターターも純粋培養・スコビー(scoby)・バックスロッピングや植物性の素材がる。
+    またホエーの形で水分を取り除いたチーズはエージング(あるいは発酵)で長期間の保存が可能になる。
+    日本は飛鳥時代には牛乳を飲まれてたようだが庶民に広がるのは明治になってからなのでその発酵文化もないので、ここばかりは海外の文化から学ぶしかないな。
