--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -159,3 +159,15 @@
     凝乳(clabber)・ヨーグルト・ダヒケフィア・ヴィーリ(viili)。スターターも純粋培養・スコビー(scoby)・バックスロッピングや植物性の素材がる。
     またホエーの形で水分を取り除いたチーズはエージング(あるいは発酵)で長期間の保存が可能になる。
     日本は飛鳥時代には牛乳を飲まれてたようだが庶民に広がるのは明治になってからなのでその発酵文化もないので、ここばかりは海外の文化から学ぶしかないな。
+- date: 2025-06-17
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 268 ~ 275
+  notes: |
+    テン・ベルズ・チーズ(Ten Bells Cheese)。生乳の安全性が心配なら長期間エージングする。
+    低温殺菌牛乳を使う場合は塩化カルシウムを加える(欠乏したカルシウムを補填し凝固を助ける)。
+    ケフィアのようなスターターを利用する場合はレンネットを加える(固めるため)。
+    シャンクリーシュ(Shankleesh)は要は水切りヨーグルトのチーズ。これをオイル漬けにする。
+    リコッタ味噌。リコッタチーズと味噌を混ぜたスプレッドのようなもの。
+    乳扇(ルーシャン)は中国雲南省のチーズ。ホエーを発酵させ酸度を高めたものが凝固剤になる。
+    チーズが出来上がったら 2 本の棒に巻き付け天日干しで乾燥させる。揚げて砂糖をかけて食べる。
+    なんで Ten Bells なんやろ。ホラー？イギリス風って感じかな。
