--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -171,3 +171,13 @@
     乳扇(ルーシャン)は中国雲南省のチーズ。ホエーを発酵させ酸度を高めたものが凝固剤になる。
     チーズが出来上がったら 2 本の棒に巻き付け天日干しで乾燥させる。揚げて砂糖をかけて食べる。
     なんで Ten Bells なんやろ。ホラー？イギリス風って感じかな。
+- date: 2025-06-18
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 276 ~ 283
+  notes: |
+    失われたつつあるヨーグルトのスターターについて。かつては純粋培養スターターやバックスロッピングではなく、植物や昆虫、果ては雨水や汚いガラスの破片など、様々なものが使われていた。
+    純粋培養スターターは微生物コミュニティといった防御機構がなく 1,2 世代で機能を失うのは、モノカルチャーの脆弱性に似ている。
+    スターターを失いバックスロッピングできなくなる場合に備えてバックアップの方法を用意しておく必要がある。
+    タルハナ(tarhana)はトルコのスープで、ヨーグルト・小麦・夏野菜・ハーブを混ぜて乾燥させた粉末で作るインスタントスープのようなもの。
+    氏が参加してきたカンファレンスでの様々なチーズとの出会い。酸敗のような風味が好まれる文化もある。
+    純粋培養が弱いってのは市販品でバックスロッピングしたことある人なら分かるよな。モノカルチャーって表現はわかりやすい。
