--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -181,3 +181,14 @@
     タルハナ(tarhana)はトルコのスープで、ヨーグルト・小麦・夏野菜・ハーブを混ぜて乾燥させた粉末で作るインスタントスープのようなもの。
     氏が参加してきたカンファレンスでの様々なチーズとの出会い。酸敗のような風味が好まれる文化もある。
     純粋培養が弱いってのは市販品でバックスロッピングしたことある人なら分かるよな。モノカルチャーって表現はわかりやすい。
+- date: 2025-06-19
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 284 ~ 290
+  notes: |
+    7 章 肉と魚
+    最も痛みやすい食材である肉や魚は発酵だけでなく乾燥・塩蔵・燻製と組み合わせて保存に利用される。
+    発酵だけを利用するのは北極圏だけであり、その場合は低い気温が複合的な保存手段となる。
+    まずアラスカのトリンギット族のスティンクヘッド(stinkheads)。鮭の頭を麻袋に入れ、浜辺の岩の下で 8 ~ 10 日間発酵させる。
+    氏が教わったレシピでは、浜辺に埋める代わりに陶器で鮭の頭を水に浸して発酵させる。
+    嫌気性のボツリヌス菌の発生を防ぐため、ラップでくるんだり密封しない。
+    ミックスカルチャーの結果このような伝統的な発酵食を作る人が減っている。前にも出てた話だが地道に継承するしかないか。
