--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -192,3 +192,15 @@
     氏が教わったレシピでは、浜辺に埋める代わりに陶器で鮭の頭を水に浸して発酵させる。
     嫌気性のボツリヌス菌の発生を防ぐため、ラップでくるんだり密封しない。
     ミックスカルチャーの結果このような伝統的な発酵食を作る人が減っている。前にも出てた話だが地道に継承するしかないか。
+- date: 2025-06-20
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 291 ~ 296
+  notes: |
+    アラスカで穫れるフーリガン(hooligans)あるいはユーラカン(eulachons)はかつて発酵して油の原料を抽出されていた。
+    いまは頭と内蔵を取り去り燻製して缶詰にされる。
+    グリーンランドのイヌイットのキビヤック(kiviaq)はアザラシの皮にヒメウミスズメを詰め地面に埋めて発酵させたもの。
+    この慣習を誤解した入植者からの偏見で文化の継続が難しくなった事例がある。
+    動物性食品主体のイヌイットの食生活は他文化から見れば単調に見えるが、実態はケワタガモの卵、セイウチの胃から得られたムール貝、一角の腸など豊かな発酵食の多様性がある。
+    ソブラサーダ(sobrasada)はスペインはマジョルカ島の柔らかい発酵ソーセージで、乾燥パプリカをふんだんに使うことで、パプリカの抗菌作用が発酵中の保護になる。
+    危ぶまれている伝統的な発酵食とその文化の存続に関しては氏は危機感を感じていて度々文中で触れてる。基本は他文化に対する理解よな。
+    ソブラサーダうまそう。元々ドイツのメッツも非常に興味があるので興味深い。
