--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -204,3 +204,12 @@
     ソブラサーダ(sobrasada)はスペインはマジョルカ島の柔らかい発酵ソーセージで、乾燥パプリカをふんだんに使うことで、パプリカの抗菌作用が発酵中の保護になる。
     危ぶまれている伝統的な発酵食とその文化の存続に関しては氏は危機感を感じていて度々文中で触れてる。基本は他文化に対する理解よな。
     ソブラサーダうまそう。元々ドイツのメッツも非常に興味があるので興味深い。
+- date: 2025-06-21
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 297 ~ 303
+  notes: |
+    肉や魚にはきわめて限られた炭水化物しか含まれないため、植物由来の炭水化物を加えることで乳酸発酵が促進される。
+    ソブラサーダではパプリカが用いられていたが、アジアでは米が主に用いられる。
+    なれずしは魚を米の中で発酵させることで乳酸が魚を保温する。
+    なれずしの一種であるかぶらずしのレシピ。鮒ずし等と比べると発酵期間が短く、酸味が出ないうちに食べる。
+    鮒ずしのくだり、何気ない藁の縄がスターターとなってる話とか興味深いな。伝統的な所作に意味がある的なことか。
