--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -213,3 +213,12 @@
     なれずしは魚を米の中で発酵させることで乳酸が魚を保温する。
     なれずしの一種であるかぶらずしのレシピ。鮒ずし等と比べると発酵期間が短く、酸味が出ないうちに食べる。
     鮒ずしのくだり、何気ない藁の縄がスターターとなってる話とか興味深いな。伝統的な所作に意味がある的なことか。
+- date: 2025-06-22
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 304 ~ 321
+  notes: |
+    腌魚(イェンユイ)と腌肉(イェンロー)はフナと豚肉を米飯とスパイスのペースに漬けて発酵させたもの。中国南西部のトン族の村、勤奮村では主食のようなものであるらしい。
+    漬ける過程で魚から液体を流し出せるよう「浮かせる」必要がある。腌魚は最低 2 ヶ月、最高の風味を得るには 4,5 ヶ月、腌肉は 3 日間漬ける。
+    ネームは東南アジアの豚肉を飯とニンニクと塩のペーストで発酵させたもの。発酵期間は 3 ~ 5 日。豚ひき肉でも作れ、その場合はバナナの葉に包んで発酵させるのが伝統的手法。
+    エピローグ。発酵は多様な文化に根ざしたプリミティブなものだ。これまで多くの伝統的手法は失われ、また更に多くが受け継がれず消え去ろうとしている。
+    私達にできることは身の回りの植物資源を活用しそれらを継承していくことだ、というところかな。これでこの本は終わり。刺激になる本だった。また読もう。
