--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -59,3 +59,6 @@
 - id: sandor-katzs-fermentation-journey
   bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
   bookAuthor: Sandor Ellix Katz, 水原文
+- id: show-us-your-screens
+  bookTitle: 演奏するプログラミング、ライブコーディングの思想と実践
+  bookAuthor: 田所 淳
