--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -222,3 +222,14 @@
     ネームは東南アジアの豚肉を飯とニンニクと塩のペーストで発酵させたもの。発酵期間は 3 ~ 5 日。豚ひき肉でも作れ、その場合はバナナの葉に包んで発酵させるのが伝統的手法。
     エピローグ。発酵は多様な文化に根ざしたプリミティブなものだ。これまで多くの伝統的手法は失われ、また更に多くが受け継がれず消え去ろうとしている。
     私達にできることは身の回りの植物資源を活用しそれらを継承していくことだ、というところかな。これでこの本は終わり。刺激になる本だった。また読もう。
+- date: 2025-06-23
+  bookTitle: 演奏するプログラミング、ライブコーディングの思想と実践
+  pages: 1 ~ 15
+  notes: |
+    数年本棚に鎮座されてたので読む。 F# で次何やるか考えるとき参考になるかな。
+    ライブコーディングは即興プログラミングによるパフォーミングアート。
+    個人的にライブコーディングは楽器の演奏で、 OSS なんかは推敲を重ねるような執筆活動のようなイメージ。
+    インタープリタ言語を使うことで、コードの即時実行が可能。 compile が必要な場合も hot reload ができれば同じことができそうやな。
+    ライブコーディングはコードとプログラマとの緊密なフィードバックループが生まれる。
+    demo のやつはインテンショナルプログラミングみたいな話か。
+    今日の OSS のように、コードが公開されてても量が膨大で認知負荷的に black box というのもママあるので、自分が制御可能な範囲にコードを取り戻すみたいな感じの理解でいいかな。
