--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -233,3 +233,13 @@
     ライブコーディングはコードとプログラマとの緊密なフィードバックループが生まれる。
     demo のやつはインテンショナルプログラミングみたいな話か。
     今日の OSS のように、コードが公開されてても量が膨大で認知負荷的に black box というのもママあるので、自分が制御可能な範囲にコードを取り戻すみたいな感じの理解でいいかな。
+- date: 2025-06-24
+  bookTitle: 演奏するプログラミング、ライブコーディングの思想と実践
+  pages: 16 ~ 35
+  notes: |
+    ライブコーディングが生まれるまで。古来音楽が即興演奏の流れを汲んでいる。
+    コンピュータ音楽は 1950 年代から始まったが、一般的なコンピュータでリアルタイム音響合成が可能になったのが 1990 年代、 laptop PC でのライブパフォーマンス Laptoronica (Laptop computer + Electronica) が生まれ、 laptop による演奏の観客に見えない構造的問題を解決する手段としてライブコーディングが生まれた。
+    2000 年の Slub に始まるライブコーディングの発展。
+    ライブコーディングのためのソフトウェアの等。 TOPLAP の GitHub repo "All things livecoding" に膨大なリストがまとめられている。
+    知らないことばかり。プログラミングが呼吸のように生活に溶け込んでくる。これは自分の方向性とも通じてていいな。
+    ライブコーディングには音響合成とグラフィクスの 2 要素があって、音響合成には SuperCollider がよく使われてるのか。
