--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -243,3 +243,14 @@
     ライブコーディングのためのソフトウェアの等。 TOPLAP の GitHub repo "All things livecoding" に膨大なリストがまとめられている。
     知らないことばかり。プログラミングが呼吸のように生活に溶け込んでくる。これは自分の方向性とも通じてていいな。
     ライブコーディングには音響合成とグラフィクスの 2 要素があって、音響合成には SuperCollider がよく使われてるのか。
+- date: 2025-06-24
+  bookTitle: 演奏するプログラミング、ライブコーディングの思想と実践
+  pages: 36 ~ 77
+  notes: |
+    Chapter 2 初級編 ライブコーディングにふれる Sonic Pi 。
+    Sonic Pi は Ruby を基にした教育用途の言語で平易で理解しやすい。利用環境毎に言語が違うのでそこそこに読んで概念を掴むつもり。
+    Synth と Sample がある。 Synth は音階を奏でる。音色毎に独自の parameter を持ち音色を調整できる。
+    Sample は音階がないが再生速度で音程を変化させられる。他にはエフェクトを掛けたり。ランダムに音程音色を変化させたり。
+    ランダムな条件分岐。 1/2 はコイントスというのか。コード演奏やスケールの指定。ルートを変数化した転調ができたり。やっぱ音楽理論が必要と。
+    live loop で途切れることなく演奏できる。 live loop は複数実行できて全部同期してる。
+    複数の live loop が同時並行して実行される概念は新鮮やな。記述は手続き的やけど live loop と全体は宣言的なんだ。
