--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -269,3 +269,15 @@
     ただ全部入りなのがちょっとなー。 今だと Pulsar(Atom の後継)が入るし自分でやるなら個々にやったほうがいい。
     d1 ~ d0 までのコネクション(トラックのようなもの)がある。演奏のパターンは文字列の中に書く。
     パターン文字列が 1 小節。 Haskell なので関数適用演算子が使えるし、 TidalCycles の独自の演算子もパターン構築に使えるっぽい。
+- date: 2025-06-27
+  bookTitle: 演奏するプログラミング、ライブコーディングの思想と実践
+  pages: 99 ~ 123
+  notes: |
+    リズムパターンの記述について。 TidalCycles 0.9 に基づいた内容。
+    リズムの細分化、繰り返し、ポリリズム、ポリメーター、再生速度と実行タイミングの変更、パターンの反転、確率的な変更。
+    リズムパターンにエフェクトをかける。
+    アルゴリズミックパターン。ユークリッドの互除法(Euclidean algorithm)を用いたユークリッド・シーケンス。
+    パターンを変数に入れたりパターンを反転させたもの、バイナリー・パターンという。
+    あと実践的な組み合わせと 1.0 での変更点。
+    急に functor 出てきてびっくりしたが Haskell なんだったわ。
+    いま 1.10 だったり 2025-06-13 には hosting が GitHub から Codeberg 移ってたり随分変わってるな。
