--- a/contents/booklogs/2025/2025-06.yml
+++ b/contents/booklogs/2025/2025-06.yml
@@ -300,3 +300,12 @@
     LiveCodeLab は On-the-fly(すぐ) に映像をライブコーディングするためのツールで Processing や openFrameworks に比べて過激派で、 WebGL を利用しながら面倒な部分を極力排除し制御することにのみ注力できる環境。
     CoffeeScript の文法でアルゴリズミックな形態の生成、 Autocode による自動改変で、ジョン・ケージの実験音楽のような偶然の要素を取り入れることもできる。
     Autocode すごいな、この概念は汎用プログラミング言語やってるだけでは出会えないわ。
+- date: 2025-06-30
+  bookTitle: 演奏するプログラミング、ライブコーディングの思想と実践
+  pages: 156 ~ 172
+  notes: |
+    Hydra は GLSL(OpenGL Shading Language) を出力して GPU で映像を生成する。
+    思想も LiveCodeLab と違って、モジュラーシンセのように装置のパラメータ調整と装置同士の接続によって複雑な映像を生成する。
+    各関数を method chaining で繋いでいくことでそれを実現してるって感じ。
+    またカメラや音声入力の信号をリアルタイムで映像に反映することができる。
+    これで終わり。数年の進歩で陳腐化してるところも見られたが、ライブコーディングの歴史や基礎的な部分は参考になったのでまた読も。この先は手を動かしてみた方が良さそう。
