--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -19,3 +19,13 @@
     型検査器を実装して動かす。エラー時の挙動もここで決める。
     TypeScript での実装なので型と AST は discriminated union での実装になってる。
     TypeScript が OK/NG にした設計意図の話も面白い。
+- date: 2025-07-03
+  bookTitle: 型システムのしくみ TypeScript で実装しながら学ぶ型とプログラミング言語
+  pages: 23 ~ 37
+  notes: |
+    第 3 章 関数型
+    関数の型の実装。この章は変数参照・無名関数・関数呼び出しをやる。
+    変数参照では定義済み変数を管理する型環境(型付け文脈)を実装する。型環境に見つからない＝未定義変数のエラー。
+    型環境を更新する際は破壊的更新を行うと静的スコープ外の変数が参照できてしまうので、非破壊的更新を行う。
+    関数の型の等価判定で仮引数の名前を比較すると仮引数の名前が違う実引数を渡せなくなるので、この実装では比較しない。
+    argument 実引数と parameter 仮引数の使い分けの経緯おもしろ。
