--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -29,3 +29,14 @@
     型環境を更新する際は破壊的更新を行うと静的スコープ外の変数が参照できてしまうので、非破壊的更新を行う。
     関数の型の等価判定で仮引数の名前を比較すると仮引数の名前が違う実引数を渡せなくなるので、この実装では比較しない。
     argument 実引数と parameter 仮引数の使い分けの経緯おもしろ。
+- date: 2025-07-04
+  bookTitle: 型システムのしくみ TypeScript で実装しながら学ぶ型とプログラミング言語
+  pages: 40 ~ 56
+  notes: |
+    第 4 章 逐次実行と変数定義
+    関数の型の続き。 TAPL の単純な拡張の中の派生形式・ let 束縛に相当する。
+    本書では TAPL にならい変数の再定義を許す。 shadowing は同一 block での再定義を禁じて下位 block で許可するやつ。
+    逐次実行と変数定義の AST が再帰的なのは ML 風で配列での実装もできる。
+    ここまでで作った型システムは必ず停止する正規化可能性が保証されるので、発散コンビネータ・ omega のようなコードは書けない。
+    また前方参照は許可していない。
+    型設計として発生しうるパターンでも parser で生成しないようにしてるってのはちょっと目からウロコ。実装の簡便さのためかな。
