--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -40,3 +40,14 @@
     ここまでで作った型システムは必ず停止する正規化可能性が保証されるので、発散コンビネータ・ omega のようなコードは書けない。
     また前方参照は許可していない。
     型設計として発生しうるパターンでも parser で生成しないようにしてるってのはちょっと目からウロコ。実装の簡便さのためかな。
+- date: 2025-07-05
+  bookTitle: 型システムのしくみ TypeScript で実装しながら学ぶ型とプログラミング言語
+  pages: 57 ~ 67
+  notes: |
+    第 5 章 オブジェクト型
+    ここで対応するのは構造体とか record と呼ばれる複数の値にラベルをつけてまとめるデータ型。
+    TAPL の単純な拡張の中のレコードに相当する。
+    なので AST でオブジェクト生成の構文は複数の値を持てるように定義する。 record の実装自体は難しくない。
+    等価判定の時間計算量が気になったけど今気にするところじゃないのかな。
+    variant のひとつ union を実装するのは TAPL の範囲を超えてしまい難しいが、 TypeScript の tagged union ならまだましなので演習問題ではそれに挑戦するようになってる(それでも難しい)。
+    なるほど読み終えてから見直してみるかあ。
