--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -51,3 +51,14 @@
     等価判定の時間計算量が気になったけど今気にするところじゃないのかな。
     variant のひとつ union を実装するのは TAPL の範囲を超えてしまい難しいが、 TypeScript の tagged union ならまだましなので演習問題ではそれに挑戦するようになってる(それでも難しい)。
     なるほど読み終えてから見直してみるかあ。
+- date: 2025-07-06
+  bookTitle: 型システムのしくみ TypeScript で実装しながら学ぶ型とプログラミング言語
+  pages: 68 ~ 78
+  notes: |
+    第 6 章 再帰関数
+    本書の再帰関数は ML 流の型推論の実装が難しいので戻り値の型を明示する。そのため宣言文も専用のものを用意する。
+    TAPL の単純な拡張の中の一般的再帰に相当する。
+    型検査器では戻り値の型の検査、また後続処理では再帰関数自身のみを含む型環境での型検査を行う。
+    このような特別な構文を用いなくても不動点コンビネータ(発散コンビネータの発展型)を利用すれば再帰関数が書ける。
+    ここで特別な構文を用いたのは抽象度が上がって説明が難しくなるためとのこと。
+    章の内容はわかったが用語がわからんの後追いで勉強が必要だわ。
