--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -62,3 +62,14 @@
     このような特別な構文を用いなくても不動点コンビネータ(発散コンビネータの発展型)を利用すれば再帰関数が書ける。
     ここで特別な構文を用いたのは抽象度が上がって説明が難しくなるためとのこと。
     章の内容はわかったが用語がわからんの後追いで勉強が必要だわ。
+- date: 2025-07-07
+  bookTitle: 型システムのしくみ TypeScript で実装しながら学ぶ型とプログラミング言語
+  pages: 79 ~ 91
+  notes: |
+    第 7 章 部分型付け
+    TAPL の部分型付けと部分型付けのメタ理論の一部に相当する。
+    TypeScript でできるような部分型付け(subtyping) という型システムの拡張。
+    この章ではオブジェクト型の部分型付けを実装するが、文脈によっては異なる型の間や関数の型の部分型付けも可能。
+    型の代入可能性、共変(covariant)と反変(contravariant)の概念。
+    条件演算子の型を実装すると join(型の結び)・ meet(型の交わり) で実装が冗長になるので本書は除外。
+    variance support の波が F# に迫って来そうなので共変・反変ちゃんと覚えようと思ってたらこんなところでばったり出会うとは。
