--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -73,3 +73,14 @@
     型の代入可能性、共変(covariant)と反変(contravariant)の概念。
     条件演算子の型を実装すると join(型の結び)・ meet(型の交わり) で実装が冗長になるので本書は除外。
     variance support の波が F# に迫って来そうなので共変・反変ちゃんと覚えようと思ってたらこんなところでばったり出会うとは。
+- date: 2025-07-08
+  bookTitle: 型システムのしくみ TypeScript で実装しながら学ぶ型とプログラミング言語
+  pages: 92 ~ 101
+  notes: |
+    第 8 章 再帰型
+    木構造や無限リストのような再帰的なデータ構造を定義するための型。
+    本書では TAPL の流儀で形式的な表現に置き換える方法で実装をする。
+    実際にはわかりやすい型エラーのために型エイリアスの遅延評価のような実装の方が採用されることが多い。
+    本書では型エイリアスの AST への追加は省略。 parser が必要とする箇所に直に埋め込んでくる。
+    型の定義は型変数と再帰型を追加。面倒さがわかるほど解像度ないのであとで勉強が必要やな。
+    空腹関数は F# では DU が必要やが TypeScript は直でいけるのか。
