--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -84,3 +84,13 @@
     本書では型エイリアスの AST への追加は省略。 parser が必要とする箇所に直に埋め込んでくる。
     型の定義は型変数と再帰型を追加。面倒さがわかるほど解像度ないのであとで勉強が必要やな。
     空腹関数は F# では DU が必要やが TypeScript は直でいけるのか。
+- date: 2025-07-09
+  bookTitle: 型システムのしくみ TypeScript で実装しながら学ぶ型とプログラミング言語
+  pages: 101 ~ 116
+  notes: |
+    本書の再帰化型の型検査器の実装では、再帰型のデータ型の展開前後が一致していれば OK とする必要がある。
+    等価判定では型変数の名前の違いは無視し、また無限に再帰しないように、比較中の型変数を覚えておく必要がある。
+    TAPL の再帰型には同型再帰と同値再帰があり、本書では TypeScript でも採用されている同値再帰を実装した。
+    同型再帰の方がユーザに注釈を求める代わりに循環検出の実装が不要になると。
+    また同値再帰は発展的な言語機能との相性の悪さから ML 系では同型再帰が採用されているらしい。
+    まだぼんやりとしかわからんがキーワードは覚えた。
