--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -94,3 +94,13 @@
     同型再帰の方がユーザに注釈を求める代わりに循環検出の実装が不要になると。
     また同値再帰は発展的な言語機能との相性の悪さから ML 系では同型再帰が採用されているらしい。
     まだぼんやりとしかわからんがキーワードは覚えた。
+- date: 2025-07-10
+  bookTitle: 型システムのしくみ TypeScript で実装しながら学ぶ型とプログラミング言語
+  pages: 117 ~ 121
+  notes: |
+    第 9 章 ジェネリクス
+    ジェネリクス(総称型)の同期は異なる型に対して同じ処理をさせる再利用。
+    ジェネリクスの実装でも型変数を使用する。再帰型のときは再帰型自身で、ジェネリクスではユーザが指定した型で置き換える。
+    TAPL では、型変数を用いた抽象化を型抽象、型変数を具体化することを型適用と呼ぶ。
+    ジェネリクスの実装は複雑。 Java や Go が当初はジェネリクスをサポートしていなかった理由では？とのこと。
+    次 TypeScript のジェネリクスを紐解くところがひとまとまりなのでここで終えておく。
