--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -104,3 +104,15 @@
     TAPL では、型変数を用いた抽象化を型抽象、型変数を具体化することを型適用と呼ぶ。
     ジェネリクスの実装は複雑。 Java や Go が当初はジェネリクスをサポートしていなかった理由では？とのこと。
     次 TypeScript のジェネリクスを紐解くところがひとまとまりなのでここで終えておく。
+- date: 2025-07-11
+  bookTitle: 型システムのしくみ TypeScript で実装しながら学ぶ型とプログラミング言語
+  pages: 121 ~ 130
+  notes: |
+    TypeScript のジェネリクスを紐解く。
+    型抽象された形を持つ関数に具体的な型を与えることはできない。
+    型抽象された型は型変数の名前が違っていても一貫して読み替えできるなら同じ型として扱える。
+    これは変数捕獲のために型変数の名前の衝突を避けるため。
+    型変数も shadowing の対象となる。型変数を具体的な型ですべて置き換えることを型代入という。
+    あと型適用が実行時には全く影響しないという話。
+    例のコードを `" ... " | deno run --check -` で検査しながらじゃないと理解が危なかった。
+    実行時に～は `deno` で interactive に検査せずやればいい。
