--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -116,3 +116,12 @@
     あと型適用が実行時には全く影響しないという話。
     例のコードを `" ... " | deno run --check -` で検査しながらじゃないと理解が危なかった。
     実行時に～は `deno` で interactive に検査せずやればいい。
+- date: 2025-07-12
+  bookTitle: 型システムのしくみ TypeScript で実装しながら学ぶ型とプログラミング言語
+  pages: 131 ~ 140
+  notes: |
+    型抽象と型変数を型と構文木に追加する。型抽象では型変数と本体の型を持つ。
+    TypeScript では型抽象が無名関数の一部として実装されているが、本書は TAPL 流で任意の項に型抽象を書ける。
+    TypeScript 4.7 で型適用構文が導入されたが、実質的に型適用も関数呼び出しの一部になっている。
+    ここまでの型代入の実装は間違ってて先で直すらしい。理解が浅いから復習が必要やな。
+    章のはじめに複雑だといってた通りか、本書の中でも実装量多いな。
