--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -125,3 +125,13 @@
     TypeScript 4.7 で型適用構文が導入されたが、実質的に型適用も関数呼び出しの一部になっている。
     ここまでの型代入の実装は間違ってて先で直すらしい。理解が浅いから復習が必要やな。
     章のはじめに複雑だといってた通りか、本書の中でも実装量多いな。
+- date: 2025-07-13
+  bookTitle: 型システムのしくみ TypeScript で実装しながら学ぶ型とプログラミング言語
+  pages: 140 ~ 154
+  notes: |
+    型検査器の実装。
+    型抽象と型適用に該当する処理を追加するだけだが、 shadowing が正しく扱われない問題と変数捕獲による問題のコーナーケースに対応する必要がある。
+    それらの問題はこれまでで敢えて間違った実装をしていた型適用に関する部分。
+    変数捕獲に於いては型変数の名前が衝突しないようにするため全く新しい名前を与える。これはフレッシュな変数と呼ばれる。
+    ここまでの内容が TAPL の全称型に相当する。 TAPL では有界量化の章で全称型と部分型を組み合わせ、指定した型の部分型なら置き換え可能な制約付きの型変数を導入している。これが TypeScript の `extends` に相当する。
+    難しいね。何度か練習しないと一回ではピンとこんな。
