--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -135,3 +135,14 @@
     変数捕獲に於いては型変数の名前が衝突しないようにするため全く新しい名前を与える。これはフレッシュな変数と呼ばれる。
     ここまでの内容が TAPL の全称型に相当する。 TAPL では有界量化の章で全称型と部分型を組み合わせ、指定した型の部分型なら置き換え可能な制約付きの型変数を導入している。これが TypeScript の `extends` に相当する。
     難しいね。何度か練習しないと一回ではピンとこんな。
+- date: 2025-07-14
+  bookTitle: 型システムのしくみ TypeScript で実装しながら学ぶ型とプログラミング言語
+  pages: 155 ~ 173
+  notes: |
+    おわりに、演習問題の解答、参考文献、索引。
+    型システムは型付け規則の集合で、その規則を機械的に判定できるようプログラムにしたのが型検査器といえる。
+    型システムは証明のしやすさに念頭を置いて作られるので、型検査器で実装しやすくないものもあり、どの規則を選ぶべきかという問題を考える必要がある。
+    次の step は TAPL に挑戦する、 TypeScript の漸進的型付けの論文を読む、自身を解析できる型解析器を作るとか。
+    型システムではある型を作る・使う構文を型理論の背景にある論理学の用語からそれぞれ導入形式・除去形式と呼ぶ事がある。 TAPL の Curry-Howard 対応参照。
+    これで終わり。ページ数少ないしサクサク読めた。でも parser を実装してないのもあって頭の中を素通りしてる箇所もあろうし、まるっと自分で書いてみる必要ありそうかなあ。
+    一度で習得できたらかっこいいけど中々な。
