--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -146,3 +146,12 @@
     型システムではある型を作る・使う構文を型理論の背景にある論理学の用語からそれぞれ導入形式・除去形式と呼ぶ事がある。 TAPL の Curry-Howard 対応参照。
     これで終わり。ページ数少ないしサクサク読めた。でも parser を実装してないのもあって頭の中を素通りしてる箇所もあろうし、まるっと自分で書いてみる必要ありそうかなあ。
     一度で習得できたらかっこいいけど中々な。
+- date: 2025-07-15
+  bookTitle: サンダー・キャッツの発酵教室
+  pages: 1 ~ 43
+  notes: |
+    過去にも読んだが気晴らしにまた読む。前読んだ発酵の旅よりレシピ本感ある。原著はもう 25 年も前みたい。
+    改めて見てみるとメニューの順番とかなんか自由な感じがする。
+    天然発酵の世界、発酵の技法(わたしはここから入った)が気軽に手に取れるのはこの本だ。
+    自分でザワークラウト作るときは汁が出るのを待つのが面倒で水を足してる。
+    氏の味噌の色は薄いよな。家で作ると 1 年でも温度が高いのかかなり色が濃くなる。
