--- a/contents/booklogs/2025/2025-07.yml
+++ b/contents/booklogs/2025/2025-07.yml
@@ -155,3 +155,11 @@
     天然発酵の世界、発酵の技法(わたしはここから入った)が気軽に手に取れるのはこの本だ。
     自分でザワークラウト作るときは汁が出るのを待つのが面倒で水を足してる。
     氏の味噌の色は薄いよな。家で作ると 1 年でも温度が高いのかかなり色が濃くなる。
+- date: 2025-07-16
+  bookTitle: サンダー・キャッツの発酵教室
+  pages: 44 ~ 87
+  notes: |
+    サワードウ・ブレッド、インジェラ、エチオピアの蜂蜜酒、ビネガー、ヨーグルト、タラとケフィア、バターミルク、サワークリーム、チーズ。
+    なるべく自然発酵に任せるのが氏のスタイルだがサワードウの発酵がイマイチならイーストも使うんだ。
+    発酵乳は最近ヴィーリを始めてみた。市販の種菌を使ってるが、本書でも書いてる通りバックスロッピングを重ねると元気がなくなる。
+    純粋培養の菌だと自然にさらされたときに周りの菌が入ってきてバランスが崩れるせいかな。
